Update English version

--- a/index_en-US.html
+++ b/index_en-US.html
@@ -27,23 +27,30 @@
 
       <h2>Introduction</h2>
       <div>
-        <p>I am currently working with the development and deployment of solutions for translation, transcription and subtitling processes, from digitalization to final review and distribution. I live in the city of Jacareí, where I am attending the sixth semester of the São Paulo Federal Institute's Systems Analysis course.</p>
+        <p>I am currently working with the development and deployment of solutions for translation, transcription and subtitling processes, from digitalization to final review and distribution. I live in the city of Jacareí, where I am attending São Paulo Federal Institute's Systems Analysis course.</p>
         <details>
           <summary>Read more</summary>
-          <p>I come from the language business, where I started teaching English as a Second Language classes. Later I transitioned to a translator position, where I had my first experiences with assisted translation tools. This was the context where I first started applying my technical knowledge and turning it into actual solutions.
+          <p>I come from the language business, where I started teaching English as a Second Language classes. Later I transitioned to a translator position, where I had my first experiences with assisted translation tools. This was the context where I first started applying my technical knowledge and turning it into actual solutions.</p>
           <p>In 2019 I co-founded NEWEN, a small freelancing agency that works with several demands related to multilanguage resources and textual services.</p>
           <p>Keeping our stack up to date, acquiring knowledge that adds value, and providing support so this value can multiply are some of my main responsibilities.</p>
           <p>Besides this, I share my data-oriented perspective and am always gladly learning about the state of the art among the text-to-speech and machine translation APIs available in the market.</p>
-          <p>Along these 4 years we have worked across different levels, from small individual projects, big and small brands and even partnerships with other translation agencies. If your project also needs internationalization, it would be a pleasure to get to know it too.</p>
+          <p>Along these 6 years we have worked across different levels, from small individual projects, big and small brands and even partnerships with other translation agencies.</p>
         </details>
       </div>
 
       <h2>Experience</h2>
       <ul class="lista">
-        <li class="item-espacado"><strong>2019 &mdash; present</strong> NEWEN Linguagens & Tecnologia
+        <li class="item-espacado"><strong>since 2019</strong> NEWEN Linguagens & Tecnologia
           <ul>
             <li><strong>Developer and Translator</strong></li>
-            <li>Developing, supporting and assessing the quality of solutions in translation, transcription and subtitling</li>
+            <li>Developing, supporting and assessing the quality of solutions in translation, transcription and captioning.</li>
+          </ul>
+        </li>
+          <li class="item-espacado"><strong>2024</strong> IT Department - IFSP Jacareí
+          <br><em><small>Campustech Internship Program, fixed 200 hours duration</small></em>
+          <ul>
+            <li><strong>Intern</strong></li>
+            <li>Development of the <a href="https://github.com/Estagio-IFSP/Estoque-CTI">Estoque-CTI</a> system using Django and Postgres, deployment of software systems in Linux hypervisor environments (XPC-ng)</li>
           </ul>
         </li>
         <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
@@ -56,11 +63,12 @@
 
       <h2>Education</h2>
       <ul class="lista">
-        <li>Tecnology Degree in Systems Analysis and Development
+        <li>Technology Degree in Systems Analysis and Development
           <ul class="lista">
             <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">
               Federal Institute of São Paulo - Jacareí campus</a></li>
             <li>In progress, 2022 &rightarrow; 2025</li>
+            <li>Academic performance index: 9.02</li>
           </ul>
         </li>
       </ul>
@@ -78,16 +86,15 @@
 
       <h2>Projects</h2>
       <ul class="lista">
-        <li><strong><a href="https://github.com/jultty/tdb">tdb</a></strong> &mdash; TypeScript implementation of the bowling rules using Test-Driven Development (TDD)</li>
-        <li><strong><a href="https://github.com/jultty/pyransom">pyransom</a></strong> &mdash; An application capable of recursively traveling through directories while encrypting them with an AES-grade algorithm, with data padding and automated tests</li>
-        <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> e <strong><a href="https://github.com/jultty/semtec-js">semtec-js</a></strong> &mdash; REST API and research project on the semantic relationships between technical terms</li>
-        <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consumes the data provided by semtec-api and matches it with the content of web pages. Written using the WebExtensions API</li>
-        <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Data visualization portfolio</li>
-        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the portuguese version of the Google Data Analytics Professional Certificate</li>
-        <br/>
-        <li><em>Visit my <a href="https://github.com/jultty?tab=repositories">GitHub</a> profile for more</em></li>
+        <li><strong><a href="https://github.com/jultty/mirante">mirante</a></strong> &mdash; Data-oriented educational system, with an architecture centered around the database. Uses the procedural PL/pgSQL language provided by PostgreSQL and provides a web interface coded in JavaScript</li>
+        <li><strong><a href="https://github.com/jultty/tori">tori</a></strong> &mdash; Manages and replicates Linux/Unix system configurations. Implemented using POSIX-compatible shell scripts and tested in Linux and BSD systems</li>
+        <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Data analysis and visualization portfolio</li>
+        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the Portuguese version of the Google Professional Certificate in Data Analysis, with scripts in Python</li>
+        <li><strong><a href="https://github.com/Estagio-IFSP/Estoque-CTI">Estoque-CTI</a></strong> &mdash; Stock control system developed using Django, PostgreSQL and JavaScript. Developed as part of the IFSP Jacareí IT Department internship program</li>
+        <li><strong><a href="https://github.com/jultty/blog">blog</a></strong> &mdash; A responsive, bilingual personal blog, with support for granular web feeds and CSS adapted to system color schemes</li>
+        <br>
+        <li><em>Check out my <a href="https://github.com/jultty?tab=repositories">GitHub</a> for more projects</em></li>
       </ul>
-
 
       <h2>Languages</h2>
       <ul class="lista">
