Add academic performance index reference value

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">
               Instituto Federal de São Paulo - Campus Jacareí</a></li>
             <li>Em andamento, 2022 &rightarrow; 2025</li>
-            <li>Índice de Rendimento Acadêmico: 9,02</li>
+            <li>Índice de Rendimento Acadêmico: 9,02 de 10</li>
           </ul>
         </li>
       </ul>
