--- a/index_en-US.html
+++ b/index_en-US.html
@@ -68,7 +68,7 @@
             <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">
               Federal Institute of São Paulo - Jacareí campus</a></li>
             <li>In progress, 2022 &rightarrow; 2025</li>
-            <li>Academic performance index: 9.02</li>
+            <li>Academic performance index: 9.02 of 10</li>
           </ul>
         </li>
       </ul>
