Update current employment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <h2>Apresentação</h2>
       <div>
-        <p>Atuo no desenvolvimento e aplicação de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, onde frequento o curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
+        <p>Atuo em desenvolvimento web e de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, cidade em que frequento o curso de Análise de Sistemas do Instituto Federal de São Paulo, onde fui selecionada por duas vezes para programas de estágio na própria instituição.<p>
         <details>
           <summary>Ler mais</summary>
           <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
@@ -40,23 +40,23 @@
 
       <h2>Experiência</h2>
       <ul class="lista">
-        <li class="item-espacado"><strong>desde 2019</strong> NEWEN Linguagens & Tecnologia
+        <li class="item-espacado"><strong>desde 7/2025</strong> &bull; Coordenadoria de TI - IFSP Jacareí
           <ul>
-            <li><strong>Desenvolvedora e Tradutora</strong></li>
-            <li>Desenvolvimento e implantação de soluções para processos de tradução, transcrição e legendagem</li>
+            <li><strong>Estagiária em Tecnologia da Informação</strong></li>
+            <li>Desenvolvimento, manutenção e suporte para sistemas internos e infraestrutura do campus</li>
           </ul>
         </li>
-          <li class="item-espacado"><strong>2024</strong> Coordenadoria de TI - IFSP Jacareí<br><em><small>Programa de estágio Campustech, duração fixa de 200 horas</small></em>
-          <ul>
-            <li><strong>Estagiária</strong></li>
-            <li>Desenvolvimento do sistema <a href="https://github.com/Estagio-IFSP/Estoque-CTI">Estoque-CTI</a> com Django e Postgres, implantação de sistemas em ambientes virtualizados Linux (XCP-ng), suporte e manutenção</li>
-          </ul>
+        <li class="item-espacado"><strong>8 a 11/2024</strong> &bull; Coordenadoria de TI - IFSP Jacareí<br><em><small>Programa de estágio Campustech, duração fixa de 200 horas</small></em>
+        <ul>
+          <li><strong>Estagiária em Tecnologia da Informação</strong></li>
+          <li>Desenvolvimento do sistema <a href="https://github.com/Estagio-IFSP/Estoque-CTI">Estoque-CTI</a> com Django e Postgres, implantação de sistemas em ambientes virtualizados Linux (XCP-ng), suporte e manutenção</li>
+        </ul>
         </li>
-        <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
-          <ul>
-            <li><strong>Professora de Inglês</strong></li>
-            <li>Planejamento e aplicação de aulas de inglês, recursos educacionais e atividades complementares</li>
-          </ul>
+        <li class="item-espacado"><strong>desde 2019</strong> &bull; NEWEN Linguagens & Tecnologia
+            <ul>
+                <li><strong>Fundadora</strong></li>
+                <li>Desenvolvimento web, implantação de soluções para processos de tradução, transcrição e legendagem</li>
+            </ul>
         </li>
       </ul>
 
